# Cetone033

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
ext/WolfWidgets/: MenuWidget.cpp
src/: Cetone033.cpp  Cetone033.h  Cetone033DPF.cpp  Cetone033Main.cpp  Cetone033Plugin.cpp  CetoneEditor.h  CetoneLpFilter.cpp  CetoneLpFilter.h  CetoneUI.cpp  CetoneUI.hpp  CetoneUIHelper.cpp  CetoneUIMenu.cpp  DistrhoPluginInfo.h  FilterBiquad.cpp  FilterMoog.cpp  PresetData.cpp  VST2.4_Compatibility.hpp  defines.h  globalfunctions.cpp  globalfunctions.h
src/Fonts/: CetoneFonts.cpp  CetoneFonts.hpp  LICENSE.SourceSans.md
src/images/: CetoneArtwork.cpp  CetoneArtwork.hpp  update_image_resources.sh
src/images/backup/: Original_Images.7z
